--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: generic
 sudo: required
 services: -docker
 before_install:
-  - docker build -t davidcingolani/react-test -f Dockerfile.dev .
+  - docker build -t davidcingolani/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true davidcingolani/react-test npm run test
@@ -15,7 +15,8 @@ after_success:
   #   Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
-  - docker push davidcingolani/multi-client
+  - docker pu    # Take those images and push them to docker hub
+  sh davidcingolani/multi-client
   - docker push davidcingolani/multi-nginx
   - docker push davidcingolani/multi-server
   - docker push davidcingolani/multi-worker
