--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,14 @@ after_success:
   - docker push davidcingolani/multi-worker
 
   deploy:
+    edge: true
     provider: elasticbeanstalk
     region: "us-west-2"
     app: "multidocker"
     env: "MultiDocker-env"
     bucket_name: "elasticbeanstalk-us-west-2-768993639995"
     bucket_path: "multidocker"
-    on: 
+    on:
       branch: master
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
